# rust_learn

./: README.md
SQLite_example/: Cargo.toml  cats.db
SQLite_example/src/: main.rs
axum_example/: Cargo.toml
hecto/: Cargo.toml
hecto/src/: Terminal.rs  document.rs  editor.rs  main.rs  row.rs
hello_web/: 404.html  Cargo.toml  hello.html
hello_web/src/: lib.rs  main.rs
minigrep/src/: lib.rs
pound/: Cargo.toml
pound/src/: main.rs
rust-sokoban/: Cargo.toml
rust-sokoban/src/: audio.rs  components.rs  entities.rs  main.rs  resources.rs
rust-sokoban/src/systems/: gameplay_state_system.rs  input_system.rs  mod.rs  rendering_system.rs
test_r2c/: Cargo.toml
test_r2c/src/: main.rs
vivo/: main.py  prompt.md  test.ipynb
vivo/c_code/basiclevel/: c1.cpp  c2.cpp  c3.cpp  c4.cpp  test.cpp
vivo/chat/model/: GLM.py
vivo/r_code/basiclevel/: test.rs  test1.rs  test2.rs  test3.rs  test4.rs
vivo/r_code/medium-level/: message_queue.rs  mutex.rs  queue.rs  tree.rs
vivo/r_code/medium-level/shm/: client.rs  server.rs
vivo/r_code/medium-level/uds/: client.rs  server.rs
vivo/tools/: parser.py  read_c.py  test_command.py  write_r.py
wasm_lua/: Cargo.toml  build.rs  wasm.html  wasm_lua.d
wasm_lua/src/: lib.rs  main.rs
wasm_lua/tests/: lua_test.rs
wasm_lua/wasm32-unknown-emscripten/debug/: wasm_lua.js
wasm_lua/wasm32-unknown-emscripten/debug/.fingerprint/bstr-149ff0f7adb1c543/: lib-bstr  lib-bstr.json
wasm_lua/wasm32-unknown-emscripten/debug/.fingerprint/memchr-8ea84b65be39abf8/: lib-memchr  lib-memchr.json
(+30 files in other folders)
