[package]
name = "axum_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
tokio = { version = "1.35.0", features = ["rt", "rt-multi-thread", "macros"] }
http = "1.0.0"
serde = { version = "1.0.193", features = ["derive"] }
tracing-subscriber = "0.3.18"